Untested changes to use mangroves

--- a/notebooks/prithvi_v2_eo_300_tl_unet_mangrove.ipynb
+++ b/notebooks/prithvi_v2_eo_300_tl_unet_mangrove.ipynb
@@ -30,6 +30,117 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# =================================================================================\n",
+        "# === commonly adjusted constants\n",
+        "# =================================================================================\n",
+        "# Set paths\n",
+        "TUNING_DATASET_PATH = \"data/output/tuning_patches\"\n",
+        "TUNING_FNAME = \"TTI_mangrove_tuning_patches.tar.bz2\"\n",
+        "\n",
+        "# Path to your file in Google Drive (adjust this to match your file's location)\n",
+        "TUNING_DRIVE_FILE_PATH = f\"/content/drive/MyDrive/{TUNING_FNAME}\"\n",
+        "\n",
+        "\n",
+        "# === spectral file config\n",
+        "# sentinel 2 MULTICROP_EXTENDED_BAND_SET\n",
+        "ALL_BAND_NAMES = (\n",
+        "    \"BLUE\",\n",
+        "    \"GREEN\",\n",
+        "    \"RED\",\n",
+        "    \"RED_EDGE\",\n",
+        "    \"RED_EDGE_2\",\n",
+        "    \"NIR\",\n",
+        "    \"SWIR\",\n",
+        "    \"SWIR_2\"\n",
+        ")\n",
+        "\n",
+        "RGB_BANDS = (\"RED\", \"GREEN\", \"BLUE\")\n",
+        "# RGB_BAND_INDICES = [5, 2, 1]  # planet\n",
+        "RGB_BAND_INDICES = [2, 1, 0]  # S2\n",
+        "\n",
+        "# statistics calculated from patches using\n",
+        "# https://github.com/7yl4r/nasa-prithvi-wetlands/blob/main/py/calculate_chip_statistics.py\n",
+        "MEANS = {\n",
+        "    # === using un-masked chips:\n",
+        "    # \"COASTAL BLUE\": 239.935709,\n",
+        "    # \"BLUE\": 234.500603,\n",
+        "    # \"GREEN I\": 284.371003,\n",
+        "    # \"GREEN II\": 278.806835,\n",
+        "    # \"YELLOW\": 282.793717,\n",
+        "    # \"RED\": 237.836126,\n",
+        "    # \"RED-EDGE\": 419.842239,\n",
+        "    # \"NEAR-INFRARED\": 1086.378684\n",
+        "    # === water-masked chips\n",
+        "    \"COASTAL BLUE\": 215.104155,\n",
+        "    \"BLUE\": 144.442869,\n",
+        "    \"GREEN I\": 143.868342,\n",
+        "    \"GREEN II\": 117.863555,\n",
+        "    \"YELLOW\": 126.104842,\n",
+        "    \"RED\": 98.780568,\n",
+        "    \"RED-EDGE\": 118.496357,\n",
+        "    \"NEAR-INFRARED\": 185.349427,\n",
+        "}\n",
+        "\n",
+        "STDS = {\n",
+        "    # === using un-masked chips:\n",
+        "    # \"COASTAL BLUE\": 129.262943,\n",
+        "    # \"BLUE\": 152.548361,\n",
+        "    # \"GREEN I\": 172.958055,\n",
+        "    # \"GREEN II\": 187.841228,\n",
+        "    # \"YELLOW\": 206.108674,\n",
+        "    # \"RED\": 210.564642,\n",
+        "    # \"RED-EDGE\": 245.177366,\n",
+        "    # \"NEAR-INFRARED\": 451.722659\n",
+        "    # === water-masked chips\n",
+        "    \"COASTAL BLUE\": 69.850072,\n",
+        "    \"BLUE\": 89.145443,\n",
+        "    \"GREEN I\": 101.908174,\n",
+        "    \"GREEN II\": 113.561898,\n",
+        "    \"YELLOW\": 120.902897,\n",
+        "    \"RED\": 123.234789,\n",
+        "    \"RED-EDGE\": 156.897678,\n",
+        "    \"NEAR-INFRARED\": 289.385948,\n",
+        "\n",
+        "}\n",
+        "\n",
+        "# === classification image settings\n",
+        "\n",
+        "CLASS_NAMES = (\n",
+        "    \"Mangrove\",\n",
+        "    \"other\",\n",
+        ")\n",
+        "# Define classes\n",
+        "ticklabels = ['Non-Seagrass', 'Seagrass', \"Sand\", \"Water\", \"Land\"]\n",
+        "colors = [\n",
+        "    '#000000', # white other\n",
+        "    '#00FF00',  # green seagrass\n",
+        "    '#8B4513', # brown sand\n",
+        "    '#0000FF', # blue water\n",
+        "    '#FF0000', # red land\n",
+        "]\n",
+        "bounds = [0, 1, 2, 3, 4, 5]  # n classes\n",
+        "tickvalues = [0.5, 1.5, 2.5, 3.5, 4.5]  # points in between n classes\n",
+        "\n",
+        "\n",
+        "\n",
+        "# === unseen image settings\n",
+        "\n",
+        "UNSEEN_IMAGE_DATASET_PATH = \"data\"\n",
+        "UNSEEN_IMAGE_FNAME = \"TTI_seasonal_s2_stack_2019_to_2021.tif\"\n",
+        "\n",
+        "# Path to your file in Google Drive (adjust this to match your file's location)\n",
+        "UNSEEN_INPUT_IMAGE_PATH = f\"/content/drive/MyDrive/GEE_Exports/{UNSEEN_IMAGE_FNAME}\"\n"
+      ],
+      "metadata": {
+        "id": "mjICPqHMeoEC"
+      },
+      "id": "mjICPqHMeoEC",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "5ca9883e",
       "metadata": {
@@ -37,7 +148,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ca9883e",
-        "outputId": "d29023d6-3de8-4e49-dd35-274dba34edf8"
+        "outputId": "d29023d6-3de8-4e49-dd35-274dba34edf8",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -233,7 +345,8 @@
         "outputId": "33eaddac-f8b4-4c2a-8d00-13369b526339",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
@@ -341,21 +454,14 @@
         "# Mount your Google Drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "# Set paths\n",
-        "dataset_path = \"data/tuning_patches\"\n",
-        "fname = \"TTI_mangrove_tuning_patches.tar.bz2\"\n",
-        "\n",
-        "# Path to your file in Google Drive (adjust this to match your file's location)\n",
-        "drive_file_path = f\"/content/drive/MyDrive/{fname}\"\n",
-        "\n",
         "# Create destination directory if it doesn't exist\n",
-        "os.makedirs(dataset_path, exist_ok=True)\n",
+        "os.makedirs(TUNING_DATASET_PATH, exist_ok=True)\n",
         "\n",
         "# Copy file from Drive to local Colab storage\n",
-        "shutil.copy(drive_file_path, os.path.join(dataset_path, fname))\n",
+        "shutil.copy(TUNING_DRIVE_FILE_PATH, os.path.join(TUNING_DATASET_PATH, TUNING_FNAME))\n",
         "\n",
         "# Unzip the file\n",
-        "!tar -xvjf {os.path.join(dataset_path, fname)}"
+        "!tar -xvjf {os.path.join(TUNING_DATASET_PATH, TUNING_FNAME)}"
       ]
     },
     {
@@ -409,17 +515,17 @@
       "source": [
         "# training_data_truncation = 800\n",
         "# validation_data_trunction = 4\n",
-        "# with open(f\"{dataset_path}/training_data.txt\", \"r\") as f:\n",
+        "# with open(f\"{TUNING_DATASET_PATH}/training_data.txt\", \"r\") as f:\n",
         "#       training_data_list = f.readlines()\n",
         "# truncated = training_data_list[0:training_data_truncation]\n",
-        "# with open(f\"{dataset_path}/training_data.txt\", \"w\") as f:\n",
+        "# with open(f\"{TUNING_DATASET_PATH}/training_data.txt\", \"w\") as f:\n",
         "#     for i in truncated:\n",
         "#         f.write(i)\n",
         "\n",
-        "# with open(f\"{dataset_path}/validation_data.txt\", \"r\") as f:\n",
+        "# with open(f\"{TUNING_DATASET_PATH}/validation_data.txt\", \"r\") as f:\n",
         "#       training_data_list = f.readlines()\n",
         "# truncated = training_data_list[0:validation_data_trunction]\n",
-        "# with open(f\"{dataset_path}/validation_data.txt\", \"w\") as f:\n",
+        "# with open(f\"{TUNING_DATASET_PATH}/validation_data.txt\", \"w\") as f:\n",
         "#     for i in truncated:\n",
         "#         f.write(i)"
       ]
@@ -469,7 +575,7 @@
       ],
       "source": [
         "# Each merged sample includes the stacked bands of three time steps\n",
-        "!ls \"{dataset_path}/training_chips\" | head"
+        "!ls \"{TUNING_DATASET_PATH}/training_chips\" | head"
       ]
     },
     {
@@ -534,30 +640,11 @@
         "    Based onhttps://github.com/terrastackai/terratorch/blob/main/terratorch/datasets/multi_temporal_crop_classification.py\n",
         "    \"\"\"\n",
         "\n",
-        "    # sentinel 2 MULTICROP_EXTENDED_BAND_SET\n",
-        "    all_band_names = (\n",
-        "        \"BLUE\",\n",
-        "        \"GREEN\",\n",
-        "        \"RED\",\n",
-        "        \"RED_EDGE\",\n",
-        "        \"RED_EDGE_2\",\n",
-        "        \"NIR\",\n",
-        "        \"SWIR\",\n",
-        "        \"SWIR_2\"\n",
-        "    )\n",
+        "    all_band_names = ALL_BAND_NAMES\n",
+        "    class_names = CLASS_NAMES\n",
+        "    rgb_bands = RGB_BANDS\n",
         "\n",
-        "\n",
-        "# TODO: CONTINUE\n",
-        "\n",
-        "    class_names = (\n",
-        "        \"Non-Seagrass\",\n",
-        "        \"Seagrass\",\n",
-        "        \"Sand\",\n",
-        "        \"Water\"\n",
-        "    )\n",
-        "    num_classes = 4\n",
-        "\n",
-        "    rgb_bands = (\"RED\", \"GREEN I\", \"BLUE\")\n",
+        "    num_classes = len(class_names)\n",
         "\n",
         "    BAND_SETS = {\"all\": all_band_names, \"rgb\": rgb_bands}\n",
         "    time_steps = 3\n",
@@ -802,51 +889,6 @@
         "from terratorch.datamodules.generic_pixel_wise_data_module import Normalize\n",
         "from terratorch.datamodules.utils import wrap_in_compose_is_list\n",
         "\n",
-        "# statistics calculated from patches using\n",
-        "# https://github.com/7yl4r/nasa-prithvi-wetlands/blob/main/py/calculate_chip_statistics.py\n",
-        "MEANS = {\n",
-        "    # === using un-masked chips:\n",
-        "    # \"COASTAL BLUE\": 239.935709,\n",
-        "    # \"BLUE\": 234.500603,\n",
-        "    # \"GREEN I\": 284.371003,\n",
-        "    # \"GREEN II\": 278.806835,\n",
-        "    # \"YELLOW\": 282.793717,\n",
-        "    # \"RED\": 237.836126,\n",
-        "    # \"RED-EDGE\": 419.842239,\n",
-        "    # \"NEAR-INFRARED\": 1086.378684\n",
-        "    # === water-masked chips\n",
-        "    \"COASTAL BLUE\": 215.104155,\n",
-        "    \"BLUE\": 144.442869,\n",
-        "    \"GREEN I\": 143.868342,\n",
-        "    \"GREEN II\": 117.863555,\n",
-        "    \"YELLOW\": 126.104842,\n",
-        "    \"RED\": 98.780568,\n",
-        "    \"RED-EDGE\": 118.496357,\n",
-        "    \"NEAR-INFRARED\": 185.349427,\n",
-        "}\n",
-        "\n",
-        "STDS = {\n",
-        "    # === using un-masked chips:\n",
-        "    # \"COASTAL BLUE\": 129.262943,\n",
-        "    # \"BLUE\": 152.548361,\n",
-        "    # \"GREEN I\": 172.958055,\n",
-        "    # \"GREEN II\": 187.841228,\n",
-        "    # \"YELLOW\": 206.108674,\n",
-        "    # \"RED\": 210.564642,\n",
-        "    # \"RED-EDGE\": 245.177366,\n",
-        "    # \"NEAR-INFRARED\": 451.722659\n",
-        "    # === water-masked chips\n",
-        "    \"COASTAL BLUE\": 69.850072,\n",
-        "    \"BLUE\": 89.145443,\n",
-        "    \"GREEN I\": 101.908174,\n",
-        "    \"GREEN II\": 113.561898,\n",
-        "    \"YELLOW\": 120.902897,\n",
-        "    \"RED\": 123.234789,\n",
-        "    \"RED-EDGE\": 156.897678,\n",
-        "    \"NEAR-INFRARED\": 289.385948,\n",
-        "\n",
-        "}\n",
-        "\n",
         "\n",
         "class MultiTemporalSeagrassClassificationDataModule(NonGeoDataModule):\n",
         "    \"\"\"NonGeo LightningDataModule implementation for multi-temporal seagrass classification.\n",
@@ -1016,7 +1058,7 @@
         "datamodule = MultiTemporalSeagrassClassificationDataModule(\n",
         "    batch_size=batch_size,\n",
         "    num_workers=num_workers,\n",
-        "    data_root=f\"{dataset_path}\",\n",
+        "    data_root=f\"{TUNING_DATASET_PATH}\",\n",
         "    train_transform=[\n",
         "        terratorch.datasets.transforms.FlattenTemporalIntoChannels(),  # Required for temporal data\n",
         "        albumentations.D4(), # Random flips and rotation\n",
@@ -1212,8 +1254,8 @@
       "source": [
         "split_name = \"training\"\n",
         "print(f\"[DEBUG] split={split_name}\")\n",
-        "print(f\"[DEBUG] found image files before filter: {len(glob.glob(os.path.join(dataset_path, \"training_chips\", '*_merged.tif')))}\")\n",
-        "print(f\"[DEBUG] found mask files before filter: {len(glob.glob(os.path.join(dataset_path, \"training_chips\", '*.mask.tif')))}\")\n",
+        "print(f\"[DEBUG] found image files before filter: {len(glob.glob(os.path.join(TUNING_DATASET_PATH, \"training_chips\", '*_merged.tif')))}\")\n",
+        "print(f\"[DEBUG] found mask files before filter: {len(glob.glob(os.path.join(TUNING_DATASET_PATH, \"training_chips\", '*.mask.tif')))}\")\n",
         "print(f\"[DEBUG] found image files after filter: {len(train_dataset.image_files)}\")\n",
         "print(f\"[DEBUG] found mask files after filter: {len(train_dataset.segmentation_mask_files)}\")\n"
       ],
@@ -1508,16 +1550,7 @@
         "        \"backbone\": prithvi_backbone,\n",
         "        \"backbone_pretrained\": True,\n",
         "        \"backbone_num_frames\": 3,\n",
-        "        \"backbone_bands\": [\n",
-        "            \"COASTAL BLUE\",\n",
-        "            \"BLUE\",\n",
-        "            \"GREEN I\",\n",
-        "            \"GREEN II\",\n",
-        "            \"YELLOW\",\n",
-        "            \"RED\",\n",
-        "            \"RED-EDGE\",\n",
-        "            \"NEAR-INFRARED\"\n",
-        "        ],\n",
+        "        \"backbone_bands\": ALL_BAND_NAMES,\n",
         "        \"backbone_coords_encoding\": [], # use [\"time\", \"location\"] for time and location metadata\n",
         "\n",
         "        # Necks\n",
@@ -1541,7 +1574,7 @@
         "\n",
         "        # Head\n",
         "        \"head_dropout\": 0.1,\n",
-        "        \"num_classes\": 13,\n",
+        "        \"num_classes\": len(CLASS_NAMES),\n",
         "    },\n",
         "\n",
         "    loss=\"ce\",\n",
@@ -1913,25 +1946,9 @@
         "import os\n",
         "import shutil\n",
         "\n",
-        "# assume drive already mounted\n",
-        "# drive.mount('/content/drive')\n",
-        "\n",
-        "dataset_path = \"data\"\n",
-        "fname = \"seasonal_stack_2020-0000000000-0000000000.tif\"\n",
-        "\n",
-        "# Path to your file in Google Drive (adjust this to match your file's location)\n",
-        "drive_file_path = \"/content/drive/MyDrive/GEE_Exports/seasonal_stack_clipped_2020/seasonal_stack_2020-0000000000-0000000000.tif\"\n",
-        "\n",
-        "# assume path already exists\n",
-        "# os.makedirs(dataset_path, exist_ok=True)\n",
-        "\n",
         "# Copy file from Drive to local Colab storage\n",
-        "input_image_path = os.path.join(dataset_path, fname)\n",
-        "shutil.copy(drive_file_path, input_image_path)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "input_image_path = os.path.join(UNSEEN_IMAGE_DATASET_PATH, UNSEEN_IMAGE_FNAME)\n",
+        "shutil.copy(drive_file_path, UNSEEN_INPUT_IMAGE_PATH)\n",
         "\n",
         "\n",
         "\n",
@@ -1961,10 +1978,7 @@
         "    \"\"\"\n",
         "\n",
         "    if bands is None:\n",
-        "        bands = [\n",
-        "            \"COASTAL BLUE\", \"BLUE\", \"GREEN I\", \"GREEN II\",\n",
-        "            \"YELLOW\", \"RED\", \"RED-EDGE\", \"NEAR-INFRARED\"\n",
-        "        ]\n",
+        "        bands = ALL_BAND_NAMES\n",
         "\n",
         "    print(\"Loading model...\")\n",
         "    # Load model\n",
@@ -2107,10 +2121,10 @@
         "            'x': image.x\n",
         "        },\n",
         "        dims=['band', 'y', 'x'],\n",
-        "        attrs={\n",
+        "        attrs={  # TODO: fix this\n",
         "            'long_name': 'Seagrass Classification',\n",
-        "            'class_0': 'Non-Seagrass',\n",
-        "            'class_1': 'Seagrass'\n",
+        "            'class_0': 'Class Absent',\n",
+        "            'class_1': 'Class Present'\n",
         "        }\n",
         "    )\n",
         "\n",
@@ -2190,16 +2204,14 @@
         "# Load the original image for RGB display\n",
         "original_image = rioxarray.open_rasterio(input_image_path, masked=True)\n",
         "\n",
-        "# Extract RGB bands (assuming Planet band order: Coastal, Blue, Green I, Green II, Yellow, Red, Red-Edge, NIR)\n",
-        "# Bands: 0=Coastal Blue, 1=Blue, 2=Green I, 5=Red\n",
-        "rgb = original_image[[5, 2, 1], :, :].astype(\"float32\").to_numpy()\n",
+        "rgb = original_image[RGB_BAND_INDICES, :, :].astype(\"float32\").to_numpy()\n",
         "rgb = np.transpose(rgb, (1, 2, 0))\n",
         "\n",
         "p99 = np.nanpercentile(rgb, 99)\n",
         "rgb_normalized = np.clip(rgb / p99, 0, 1)\n",
         "\n",
         "# Create figure with subplots\n",
-        "fig, axes = plt.subplots(1, 3, figsize=(20, 8))\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(20, 8))\n",
         "\n",
         "# Plot 1: Original RGB image\n",
         "axes[0].imshow(rgb_normalized)\n",
@@ -2207,40 +2219,17 @@
         "axes[0].axis('off')\n",
         "\n",
         "# Plot 2: Classification result\n",
-        "# Define classes\n",
-        "ticklabels = ['Non-Seagrass', 'Seagrass', \"Sand\", \"Water\", \"Land\"]\n",
-        "colors = [\n",
-        "    '#000000', # white other\n",
-        "    '#00FF00',  # green seagrass\n",
-        "    '#8B4513', # brown sand\n",
-        "    '#0000FF', # blue water\n",
-        "    '#FF0000', # red land\n",
-        "]\n",
-        "bounds = [0, 1, 2, 3, 4, 5]  # n classes\n",
-        "tickvalues = [0.5, 1.5, 2.5, 3.5, 4.5]  # points in between n classes\n",
-        "\n",
-        "\n",
         "cmap = mcolors.ListedColormap(colors)\n",
         "norm = mcolors.BoundaryNorm(bounds, cmap.N)\n",
         "\n",
         "im = axes[1].imshow(prediction, cmap=cmap, norm=norm)\n",
-        "axes[1].set_title('Seagrass Classification', fontsize=14, fontweight='bold')\n",
+        "axes[1].set_title('Classification', fontsize=14, fontweight='bold')\n",
         "axes[1].axis('off')\n",
         "\n",
         "# Add colorbar\n",
         "cbar = plt.colorbar(im, ax=axes[1], orientation='horizontal', pad=0.05, fraction=0.046)\n",
         "cbar.set_ticks(tickvalues)\n",
         "cbar.set_ticklabels(ticklabels)\n",
-        "\n",
-        "# Plot 3: Overlay classification on RGB\n",
-        "overlay = rgb_normalized.copy()\n",
-        "# Create semi-transparent mask for seagrass\n",
-        "seagrass_mask = prediction == 1\n",
-        "overlay[seagrass_mask] = overlay[seagrass_mask] * 0.5 + np.array([0, 1, 0]) * 0.5  # Blend with green\n",
-        "\n",
-        "axes[2].imshow(overlay)\n",
-        "axes[2].set_title('Seagrass Overlay on RGB', fontsize=14, fontweight='bold')\n",
-        "axes[2].axis('off')\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
@@ -2257,8 +2246,8 @@
         "print(\"CLASSIFICATION STATISTICS\")\n",
         "print(\"=\"*60)\n",
         "print(f\"Total pixels: {total_pixels:,}\")\n",
-        "print(f\"Seagrass pixels: {seagrass_pixels:,} ({100*seagrass_pixels/total_pixels:.2f}%)\")\n",
-        "print(f\"Non-Seagrass pixels: {non_seagrass_pixels:,} ({100*non_seagrass_pixels/total_pixels:.2f}%)\")\n",
+        "print(f\"Class Present pixels: {seagrass_pixels:,} ({100*seagrass_pixels/total_pixels:.2f}%)\")\n",
+        "print(f\"Class Absent pixels: {non_seagrass_pixels:,} ({100*non_seagrass_pixels/total_pixels:.2f}%)\")\n",
         "print(\"=\"*60)\n",
         "\n",
         "# ============================================================================\n",
